# BitcoinIII-Core

./: .cirrus.yml  .gitignore  CMakeLists.txt  CONTRIBUTING.md  COPYING  README.md  SECURITY.md  libbitcoinIIIkernel.pc.in  mainnet-genesis.json  privatekeydemo.txt  replace.sh  vcpkg.json
.tx/: config
ci/: lint_imagefile  lint_run_all.sh  test_imagefile  test_run_all.sh
cmake/: bitcoinIII-build-config.h.in  ccache.cmake  crc32c.cmake  introspection.cmake  leveldb.cmake  minisketch.cmake  tests.cmake
contrib/: README.md  filter-lcov.py  valgrind.supp
doc/: CMakeLists.txt  Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  assumeutxo.md  benchmarking.md  bips.md  bitcoinIII-conf.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows-msvc.md  build-windows.md  cjdns.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  guix.md  i2p.md  init.md  managing-wallets.md  multiprocess.md  multisig-tutorial.md  offline-signing-tutorial.md  p2p-bad-ports.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  (+6 more)
share/: setup.nsi.in
src/: .clang-tidy  CMakeLists.txt  addrdb.cpp  addrdb.h  addresstype.cpp  (+151 more)
src/qt/test/: CMakeLists.txt  addressbooktests.cpp  addressbooktests.h  apptests.cpp  apptests.h  optiontests.cpp  optiontests.h  rpcnestedtests.cpp  rpcnestedtests.h  test_main.cpp  uritests.cpp  uritests.h  util.cpp  util.h  wallettests.cpp  wallettests.h
(+1704 files in other folders)
